--- a/src/content/posts/2025-01-25-uoft-ece-upper-year-course-planning-tips/index.mdx
+++ b/src/content/posts/2025-01-25-uoft-ece-upper-year-course-planning-tips/index.mdx
@@ -85,7 +85,7 @@ Take it in fall for the better lectures, overall better organization, and to hel
 ECE302 course with low workload, great lectures, lenient marking, and really-good-to-know content that makes it a must-have for all engineers, regardless of discipline.
 
 <Callout type="info" classes="border-grey-950/100 bg-grey-100 dark:border-grey-100/100 dark:bg-grey-950">
-  **Fun fact:** One of Prof. Jonathon Rose's biggest regrets from his time as Chair of the ECE department at UofT was not pushing for ECE302 to be a mandatory course for engineering students. And he was' right', probability is ~~super cool~~ important to have a solid foundation in regardless of your discipline.
+  **Fun fact:** One of Prof. Jonathon Rose's biggest regrets from his time as Chair of the ECE department at UofT was not pushing for ECE302 to be a mandatory course for engineering students. And I would agree, probability is ~~super cool~~ pretty important to have a solid foundation in regardless of your discipline.
 </Callout>
 
 ### What you learn
