--- a/src/content/posts/2024-04-24-how-to-put-20k+-words-on-a-cheatsheet/index.mdx
+++ b/src/content/posts/2024-04-24-how-to-put-20k+-words-on-a-cheatsheet/index.mdx
@@ -9,10 +9,9 @@ authors: ['sadman']
 ---
 
 import ImageGallery from '@/components/ImageGallery.astro';
-import ImageGalleryCaption from '@/components/ImageGalleryCaption.astro';
 import PdfViewer from '@/components/PdfViewer.astro';
 import Callout from '@/components/mdx/Callout.astro';
-import ImageZoom from '@/components/mdx/ImageZoom.astro';
+import PhotoSwipe from "@/components/PhotoSwipe.astro";
 
 import { Code } from 'astro-expressive-code/components';
 import latexsheet from './latexsheet.tex?raw';
@@ -32,10 +31,10 @@ The answer is surprisingly simple. But to get there, there's 3 things we need to
 import fullpage from './01-fullpage.jpg'
 import zoomed from './01-zoomed.jpg'
 
-<ImageGalleryCaption images={[
+<PhotoSwipe imagePaths={[
   { src: fullpage, caption: "Full page view of cheatsheet" },
   { src: zoomed, caption: "Zoomed in view of cheatsheet" },
-]} columns={2} />
+]} />
 
 Alas, putting together a behemoth of a cheatsheet like this one takes a while. It's an intricate process that involves making a number of decisions, the first of which is selecting the best tool for the job.
 
@@ -80,12 +79,10 @@ On that last point, I took a quick search on Github[^gh] for any LaTeX cheatshee
 import latexsheet0 from './latexsheet-0.jpg'
 import latexsheet1 from './latexsheet-1.jpg'
 
-<ImageGalleryCaption images={[
+<PhotoSwipe imagePaths={[
   { src: latexsheet0, caption: "Front page: sample LaTeX cheatsheet" },
   { src: latexsheet1, caption: "Back page: sample LaTeX cheatsheet" },
-]} columns={2} />
-
-<br/>
+]} />
 
 *Source: [https://wch.github.io/latexsheet](https://wch.github.io/latexsheet)*
 
@@ -114,10 +111,10 @@ And what's brilliant about all of this, is that the Typst team have been generou
 import typst from './02-typst.jpg'
 import overleaf from './02-overleaf.jpg'
 
-<ImageGalleryCaption images={[
+<PhotoSwipe imagePaths={[
   { src: typst, caption: "Landing page: Typst" },
   { src: overleaf, caption: "Landing page: Overleaf" },
-]} columns={2} />
+]} />
 
 It's awe-inspiring to think of just how powerful Typst is given how easy it is to use as well, making it a fantastic option not just for writing cheatsheets but for replacing LaTeX for a ridiculous number of purposes (as for myself, I now exclusively use Typst to typeset pretty much any PDF requiring math notation, which at the time of writing is pretty much just relegated to homework assignments for calculus/algorithms/data structures/database design courses). But we're here to figure out how to write a kickass cheatsheet, so let's get to it.
 
@@ -143,10 +140,9 @@ For a good example at what not to do, consider my cheatsheet (below) for an [int
 
 import ece241 from './03-ece241.jpg'
 
-<figure>
-  <ImageZoom src={ece241} alt="My cheatsheet for an introductory digital logics course, which is a complete mess of different sized blocks of diagrams mixed in with text." class="rounded-xl"/>
-  <figcaption>My cheatsheet for an introductory digital logics course, which is a complete mess of different sized blocks of diagrams mixed in with text.</figcaption>
-</figure>
+<PhotoSwipe imagePaths={[
+  { src: ece241, caption: "My cheatsheet for an introductory digital logics course, which is a complete mess of different sized blocks of diagrams mixed in with text." },
+]} />
 
 How do we maintain uniformity with incredibly tiny text? Well, for starters, stick with a consistent method of structuring your content. The best way of doing this, regardless of whether you're using some typesetting engine or a text editor, is with a table. Ideally, a single table that fills up the entire page (so you don't have to deal with all the spacing headaches trying to properly sandwich together multiple tables of different sizes onto the same 8.5x11 inch sheet of paper) with consistently sized rows and columns. In addition, go with justified or centre-aligned text instead of left/right-aligned (having straight edges for text boxes is a lot easier to read than text boxes with jagged edges that have no easily parseable pattern)
 
@@ -164,7 +160,7 @@ import stint from './04-stint.jpg'
 
 - Highlight terms while leaving their definitions as plain text so that you can look into a sea of text and quickly see whether the term you're looking for is even present at all first.
 - Break up multi-layered content by using multiple levels of formatting for your headings, subheadings, definitions, sub-definitions, and so on.
-  - Also have separate fonts for important terms, plaintext, and special text (e.g. code, math); ensure that all work well at small scales (adjustments to character and word spacing can luckily be made by Typst, which means all you need to do is focus on readability; you can fit more characters of a thin font in the same space of whitespace compared to a wider font, so keep that in mind and maybe don't select something as wide as [Stint Ultra Expanded](https://fonts.google.com/specimen/Stint+Ultra+Expanded)): <br/><br/><ImageZoom src={stint} alt="Font sample: Stint Ultra Expanded."/>
+  - Also have separate fonts for important terms, plaintext, and special text (e.g. code, math); ensure that all work well at small scales (adjustments to character and word spacing can luckily be made by Typst, which means all you need to do is focus on readability; you can fit more characters of a thin font in the same space of whitespace compared to a wider font, so keep that in mind and maybe don't select something as wide as [Stint Ultra Expanded](https://fonts.google.com/specimen/Stint+Ultra+Expanded)): <div class="mt-4"/><PhotoSwipe imagePaths={[ { src: stint, caption: "Font sample: Stint Ultra Expanded." }]} />
 - Have some method of clearly separating unrelated content (that minimizes use of whitespace, like a dotted line).
 
 
