feat: move photoswipe script to layout
- photoswipe: remove opacity change on hover
- fix typo in using CodeToggle

--- a/src/content/posts/2025-01-31-goodreads-component-in-astro/index.mdx
+++ b/src/content/posts/2025-01-31-goodreads-component-in-astro/index.mdx
@@ -435,7 +435,7 @@ export const colon = new RegExp("\\w+:", "gm");
 
 <Code code={schema} lang="ts" title="astro-loaders/packages/feed/src/schema.ts" collapse="1-34, 54-9999999" mark={mark} wrap={false} />
 
-<CodeToggle showSourceText="Show XML Code for Goodreads RSS Feed" HideSourceText="Hide XML Code for Goodreads RSS Feed" code={sadmanRss} lang="xml" title="rss.xml" collapse="1-20, 63-9999999" mark={mark} wrap={false} />
+<CodeToggle showSourceText="Show XML Code for Goodreads RSS Feed" hideSourceText="Hide XML Code for Goodreads RSS Feed" code={sadmanRss} lang="xml" title="rss.xml" collapse="1-20, 63-9999999" mark={mark} wrap={false} />
 
 <hr/> 
 
