fix: errors in migration to astro-loader-goodreads

--- a/src/content/posts/2025-01-31-goodreads-component-in-astro/index.mdx
+++ b/src/content/posts/2025-01-31-goodreads-component-in-astro/index.mdx
@@ -21,9 +21,9 @@ import sadmanRss from './sadman-rss.xml?raw';
 
 import goodreadsUnstyledImg from './goodreads-unstyled.jpg';
 import goodreadsTailwindImg from './goodreads-tailwind.jpg';
-import goodreadsUnstyled from './goodreads-unstyled.astro?raw';
-import goodreadsTailwind from './goodreads-tailwind.astro?raw';
-import goodreadsGrid from './GoodreadsGrid.astro?raw';
+import goodreadsUnstyled from './.goodreads-unstyled.astro?raw';
+import goodreadsTailwind from './.goodreads-tailwind.astro?raw';
+import goodreadsGrid from './.GoodreadsGrid.astro?raw';
 
 import schema from './schema.ts?raw';
 
