feat: add MediumZoom component for images

--- a/src/content/posts/2020-11-09-why-i-use-trello/index.mdx
+++ b/src/content/posts/2020-11-09-why-i-use-trello/index.mdx
@@ -8,7 +8,6 @@ authors: ['sadman']
 ---
 
 import { Image } from 'astro:assets';
-import PhotoSwipe from "@/components/PhotoSwipe.astro";
 
 ## To Have a 'To-Do' List is To Be Human
 
@@ -24,9 +23,10 @@ Trello is a (free!) visual project management tool that is based on the kanban s
 
 import trellokanban from './1_trello_drag_drop.gif';
 
-<PhotoSwipe imagePaths={[
-  { src: trellokanban, caption: "A kanban board with cards in Trello" },
-]} />
+<figure>
+  <Image src={trellokanban} alt="A kanban board with cards in Trello"  class="zoom-image"  />
+  <figcaption>A kanban board with cards in Trello</figcaption>
+</figure>
 
 If we left it at that, Trello would've been a nice, simple tool for building to do lists. But it gets better.
 
@@ -36,11 +36,10 @@ Within each card, you have a smorgasbord of options. You can add a description, 
 
 import withincards from './2_within_cards.gif';
 
-<PhotoSwipe imagePaths={[
-  { src: withincards, caption: "Trello card options including description, due date, checklists, labels, and more" },
-]} />
-
-<br/>
+<figure>
+  <Image src={withincards} alt="Trello card options including description, due date, checklists, labels, and more" class="zoom-image"  />
+  <figcaption>Trello card options including description, due date, checklists, labels, and more</figcaption>
+</figure>
 
 ### How I Use It
 
@@ -48,11 +47,10 @@ There’s no strict rules regarding how you need to use Trello. Personally, I tr
 
 import howIUseIt from './3_how_i_use_it.jpg';
 
-<PhotoSwipe imagePaths={[
-  { src: howIUseIt, caption: "Example of using Trello to organize schoolwork, side projects, and extracurricular activities" },
-]} />
-
-<br/>
+<figure>
+  <Image src={howIUseIt} alt="Example of using Trello to organize schoolwork, side projects, and extracurricular activities" class="zoom-image"  />
+  <figcaption>Example of using Trello to organize schoolwork, side projects, and extracurricular activities</figcaption>
+</figure>
 
 ### Power(ing)-Up
 
@@ -62,8 +60,9 @@ Some examples of Power-Up functionality include showing due dates on a calendar 
 
 import powerups from './4_power_ups.gif';
 
-<PhotoSwipe imagePaths={[
-  { src: powerups, caption: "Examples of Trello Power-Ups including calendar integration, due date countdowns, and cloud service integrations" },
-]} />
+<figure>
+  <Image src={powerups} alt="Examples of Trello Power-Ups including calendar integration, due date countdowns, and cloud service integrations" class="zoom-image"  />
+  <figcaption>Examples of Trello Power-Ups including calendar integration, due date countdowns, and cloud service integrations</figcaption>
+</figure>
 
 Even with only a single Power-Up, Trello is an absolute banger of a tool to use if you’re looking for something that can help you organize everything, from your Mom’s birthday to your projects at work, in one place. A lot of tools try to do everything at once, and end up doing mediocre at best for whatever they try to do. Trello is an example of the rare tool that pulls it off.
